Fix portfolio in dark mode

--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -7,11 +7,12 @@
   }
   &__grid {
     display: grid;
-    grid-gap: 1rem;
+    grid-gap: var(--portfolio-gap, 2rem);
     @media (min-width: $smedium + 1) {
       grid-template-columns: repeat(auto-fit, 320px);
       justify-content: center;
       grid-auto-rows: 1fr;
+      --portfolio-gap: 1rem;
     }
   }
 }
@@ -19,6 +20,9 @@
 .folio {
   padding: 0;
   height: 100%;
+  @media (prefers-color-scheme: dark) {
+    border: 1px solid var(--border-color);
+  }
   .gatsby-image-wrapper {
     transition: all 0.5s ease-in-out;
     transform: scale(1);
